// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`adapter can fetch features from volvox.bw adapter can fetch stats from volvox.bw 1`] = `
{
  "basesCovered": 49984,
  "featureDensity": 0.00002000640204865557,
  "scoreMax": 38,
  "scoreMean": 19.197983354673497,
  "scoreMin": 1,
  "scoreStdDev": 4.55961443138808,
  "scoreSum": 959592,
  "scoreSumSquares": 19461382,
}
`;

exports[`adapter can fetch features from volvox.bw get local stats 1`] = `
{
  "basesCovered": 30098,
  "featureCount": 751,
  "featureDensity": 0.024951824041464548,
  "scoreMax": 38,
  "scoreMean": 19.301331545478018,
  "scoreMeanMax": 34.79999923706055,
  "scoreMeanMin": 6.425000190734863,
  "scoreMin": 0,
  "scoreStdDev": 4.09050138786663,
  "scoreSum": 14495.299990653992,
  "scoreSumSquares": 292327.74217388127,
}
`;

exports[`adapter can fetch features from volvox.bw get region stats 1`] = `
{
  "basesCovered": 30000,
  "featureCount": 751,
  "featureDensity": 0.025033333333333335,
  "scoreMax": 38,
  "scoreMean": 19.301331545478018,
  "scoreMeanMax": 34.79999923706055,
  "scoreMeanMin": 6.425000190734863,
  "scoreMin": 5,
  "scoreStdDev": 4.08777711091585,
  "scoreSum": 14495.299990653992,
  "scoreSumSquares": 292327.74217388127,
}
`;

exports[`adapter can fetch features from volvox.bw test basic aspects of getfeatures 1`] = `
[
  {
    "end": 1003,
    "maxScore": undefined,
    "minScore": undefined,
    "refName": "ctgA",
    "score": 18,
    "source": "",
    "start": 1002,
    "summary": false,
    "uniqueId": ":ctgA:1002-1003",
  },
  {
    "end": 1004,
    "maxScore": undefined,
    "minScore": undefined,
    "refName": "ctgA",
    "score": 18,
    "source": "",
    "start": 1003,
    "summary": false,
    "uniqueId": ":ctgA:1003-1004",
  },
  {
    "end": 1005,
    "maxScore": undefined,
    "minScore": undefined,
    "refName": "ctgA",
    "score": 18,
    "source": "",
    "start": 1004,
    "summary": false,
    "uniqueId": ":ctgA:1004-1005",
  },
  {
    "end": 1006,
    "maxScore": undefined,
    "minScore": undefined,
    "refName": "ctgA",
    "score": 19,
    "source": "",
    "start": 1005,
    "summary": false,
    "uniqueId": ":ctgA:1005-1006",
  },
  {
    "end": 1007,
    "maxScore": undefined,
    "minScore": undefined,
    "refName": "ctgA",
    "score": 20,
    "source": "",
    "start": 1006,
    "summary": false,
    "uniqueId": ":ctgA:1006-1007",
  },
  {
    "end": 1008,
    "maxScore": undefined,
    "minScore": undefined,
    "refName": "ctgA",
    "score": 20,
    "source": "",
    "start": 1007,
    "summary": false,
    "uniqueId": ":ctgA:1007-1008",
  },
  {
    "end": 1009,
    "maxScore": undefined,
    "minScore": undefined,
    "refName": "ctgA",
    "score": 20,
    "source": "",
    "start": 1008,
    "summary": false,
    "uniqueId": ":ctgA:1008-1009",
  },
  {
    "end": 1010,
    "maxScore": undefined,
    "minScore": undefined,
    "refName": "ctgA",
    "score": 20,
    "source": "",
    "start": 1009,
    "summary": false,
    "uniqueId": ":ctgA:1009-1010",
  },
  {
    "end": 1011,
    "maxScore": undefined,
    "minScore": undefined,
    "refName": "ctgA",
    "score": 20,
    "source": "",
    "start": 1010,
    "summary": false,
    "uniqueId": ":ctgA:1010-1011",
  },
  {
    "end": 1012,
    "maxScore": undefined,
    "minScore": undefined,
    "refName": "ctgA",
    "score": 19,
    "source": "",
    "start": 1011,
    "summary": false,
    "uniqueId": ":ctgA:1011-1012",
  },
]
`;
